--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "jsonfile": "^5.0.0",
+    "node-json2html": "^1.3.0",
     "nodemailer": "^6.4.2",
     "puppeteer": "^2.1.0"
   }
