--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
     "jsonfile": "^5.0.0",
     "node-json2html": "^1.3.0",
     "nodemailer": "^6.4.2",
