--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
+    "express": "^4.17.1",
     "jsonfile": "^5.0.0",
     "node-json2html": "^1.3.0",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.2",
     "puppeteer": "^2.1.0"
   }
