--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "webpack  --mode=production"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,11 @@
     "node-json2html": "^1.3.0",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.2",
-    "puppeteer": "^2.1.0"
+    "puppeteer": "^2.1.0",
+    "webpack": "^4.41.5",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.10"
   }
 }
