--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "webpack  --mode=production"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +17,7 @@
     "node-json2html": "^1.3.0",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.2",
-    "puppeteer": "^2.1.0",
-    "webpack": "^4.41.5",
-    "webpack-node-externals": "^1.7.2"
+    "puppeteer": "^2.1.0"
   },
-  "devDependencies": {
-    "webpack-cli": "^3.3.10"
-  }
+  "devDependencies": {}
 }
