--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=8000
 MYNTRA_USER=pawarg124@gmail.com
 MYNTRA_PWD=sejal1997
 GMAIL=pawarg124@gmail.com
-GMAIL_PWD=@Sejal1997
+GMAIL_PWD=@@Sejal1997
